Fixed some issues & made all buttons on the front page invisible except for the slot machines

--- a/htdocs/css/master.css
+++ b/htdocs/css/master.css
@@ -96,3 +96,8 @@ html{
     scrollbar-color: #febd14 #c30010;
     scrollbar-width: 0px;
 }
+.disabled{
+    pointer-events: none;
+    color: grey;
+    opacity: 0.5;
+}
